Melhoria do Menu 1.0

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <nav>
       <a href="index.html">Home</a>
-      <a href="noticias.html">Notícias</a>
-      <a href="curiosidades.html">Curiosidades</a>
-      <a href="fale-conosco.html">Fale Conosco</a>
+        <a href="noticias.html">Notícias</a>
+        <a href="dicas.html">Dicas</a>
+        <a href="contato.html">Contato</a>
     </nav>
 
   </header>
