--- a/dicas.html
+++ b/dicas.html
@@ -8,17 +8,22 @@
     <a href="fontes/idroid.otf"></a>
     <title>Android</title>
   </head>
+
   <body>
     <header>
-      <h1 id="principal">CURIOSIDADES DE TECNOLOGIA</h1>
-      <p id="cabecalho">
+
+      <h1>CURIOSIDADES DE TECNOLOGIA</h1>
+
+      <p>
         Tudo aquilo que você sempre quis saber sobre o mundo <br />
         Tech, em um único lugar
       </p>
+
       <nav>
         <a href="index.html">Home</a>
         <a href="noticias.html">Notícias</a>
-        <a href="curiosidades.html">Curiosidades</a>
-        <a href="fale-conosco.html">Fale Conosco</a>
+        <a href="dicas.html">Dicas</a>
+        <a href="contato.html">Contato</a>
       </nav>
+      
     </header>
